cors_exploit/sg.tf
# Def don't want default security group.

resource "aws_security_group" "woznet-public-sg" {
  name = "Lucy"
  description = "Bobs Internet Service"
  vpc_id = data.aws_vpc.default.id

  egress {
    from_port = 0
    to_port = 0
    protocol = -1
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"] 
  }
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["32.141.185.206/32", "172.125.57.137/32"]
    ipv6_cidr_blocks = ["2600:1700:3b20:6ff0:e2cb:4eff:fefc:14bb/128"] 
  }
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["32.141.185.206/32", "172.125.57.137/32"]
  }
  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["32.141.185.206/32", "172.125.57.137/32"]
  }
  ingress {
    from_port = -1
    to_port = -1
    protocol = "icmp"
    cidr_blocks = ["32.141.185.206/32", "172.125.57.137/32"]
  }
  ingress {
    from_port = -1
    to_port = -1
    protocol = "icmp"
  }

  tags = {
    Name = "woznet-public-sg"
  }
}
